tests/parser/define-class.16.bad.error
error: Malformed functional dependency
  --> test:4:33
   |
 4 |  (define-class (C :a :b (:a :b ->)))
   |                                  ^ expected one or more type variables
