tests/parser/define-class.16.bad.coalton
;; BAD: Define Class
(package test-class)

(define-class (C :a :b (:a :b ->)))
